2009-11-29  higepon  <higepon@users.sourceforge.jp>

	* gen-git-build.sh: Added to build git master.

	* README: Added building guide.

	* Makefile.am : Modified bootstrap target to fetch psyntax.scm from svn.

	* lib/psyntax/Makefile: Added code for saving psyntax.scm to svn.

2009-11-27  higepon  <higepon@users.sourceforge.jp>

	* Cleaned up top-directory. Most files are moved to src/ directory.

	We need to clean up, since github shows all files on a top directory.

	* src/UTF8Codec.cpp (putChar): Fixed range of UTF8-4.

	* Makefile.am (bootstrap): Added bootstrap target.

	This is used by developer.

2009-11-23  higepon  <higepon@users.sourceforge.jp>

	* VM.h (SAVE_REGISTERS): Fixed the bug Issue 112 pointed out by mrc.mgg.

	SAVE_REGISTERS used to save sp_ and fp_, but this will be broken when stack is expanded automatically.
	So we save the offset of them.

2009-11-17  higepon  <higepon@users.sourceforge.jp>

	* lib/srfi/%3a42/eager-comprehensions.sls (srfi): Added missing import.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: For thread safety, prefix-inc! is executed by only main-vm.

	* Added --verbose command line options, which shows library serialization messages.
	  This option is requested by mrc.mgg on Issue 114.

	* VMFactory.cpp (VMFactory::create): Fixed miss sharing transcoders between stdin/stdout.
	                                     Fixed issue 115  pointed out by tabe.fixedpoint.

2009-11-16  higepon  <higepon@users.sourceforge.jp>

	* ffi_stub_x86_64.S: Added.

2009-11-14  higepon  <higepon@users.sourceforge.jp>

	* Still failed some tests to be fixed.

	* lib/mosh/ffi.ss : c-function handles many argument types.

2009-11-13  higepon  <higepon@users.sourceforge.jp>

	* Symbol.cpp: intern becomes thread safe.

	* NumberScanner.h : NumberScanner becomes pure parser, which means thread safe.

	* Scanner.h : Scanner becomes pure parser, which means thread safe.

2009-11-12  higepon  <higepon@users.sourceforge.jp>
