@@ -1,3 +1,7 @@
+2009-11-30  higepon  <higepon@users.sourceforge.jp>
+
+	* src/UTF16Codec.cpp : Fixed utf16->string and string->utf16.
+
 2009-11-29  higepon  <higepon@users.sourceforge.jp>
 
 	* gen-git-build.sh: Added to build git master.
